<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleNoGpsInfo"
        android:id="@+id/txtTitleGpsDialog"
        android:fontFamily="sans-serif"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/txtBodyGpsDialog"
        android:layout_alignStart="@+id/txtBodyGpsDialog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bodyNoGpsDialog1"
        android:id="@+id/txtBodyGpsDialog"
        android:fontFamily="sans-serif-light"
        android:gravity="left"
        android:layout_below="@+id/txtTitleGpsDialog"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp" />


    <TextView

        android:gravity="left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/bodyNoGpsDialog2"
        android:layout_below="@+id/txtBodyGpsDialog"
        android:layout_alignLeft="@+id/txtBodyGpsDialog"
        android:layout_alignStart="@+id/txtBodyGpsDialog" />


</RelativeLayout>